--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "Follow along with me on the road to my first sprint triathlon, whe
 # email: "example@mail.com"
 # twitter_username: "twitteruser"
 # github_username: "githubuser"
-" linkedin_username: "linkedinuser"
+# linkedin_username: "linkedinuser"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
